Api 추가 시도중 2
ApiPublicWater.kt
ApiTestField.kt
ListViewAdapter.kt
ListViewItem.kt

activity_api_test_field.xml -> ApiTestField.kt와 연결

listview.xml 추가
strings.xml 에 임시 데이터 추가

https://popcorn16.tistory.com/100

대부분의 코드는 위의 링크에서 옴

ApiTestField.kt의 버튼 리스너 안에 주석들은 켜두면 프로그램이 죽음 이유는 아직 모름

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,28 @@
     <string name="backHome">홈으로</string>
     <string name="moreInfo">세부정보</string>
 
+    <string-array name="Apitest">
+        <item>거제시</item>
+        <item>고령군</item>
+        <item>광주시</item>
+        <item>금산군</item>
+        <item>나주시</item>
+        <item>단양군</item>
+        <item>동두천시</item>
+        <item>봉화군</item>
+        <item>사천시</item>
+        <item>양주시</item>
+        <item>예천군</item>
+        <item>완도군</item>
+        <item>장흥군</item>
+        <item>정읍시</item>
+        <item>진도군</item>
+        <item>청송군</item>
+        <item>통영시</item>
+        <item>파주시</item>
+        <item>함평군</item>
+    </string-array>
+
     <string-array name="cities">
         <item>서울특별시</item>
         <item>부산광역시</item>
